[UPD] Update Helpdesk setting for new SelfService options

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/SelfServiceSetting/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/SelfServiceSetting/Index.cshtml
@@ -26,6 +26,26 @@
             </ul>
             <div class="tab-content">
                 <div class="tab-pane tab-pane-border active" id="fragment-1">
+                    <h4>@Translation.Get("Självservice – Restriction", Enums.TranslationSource.TextTranslation)</h4>
+                    <div class="formContainer">
+                        <table class="tableform">
+                            <tr>
+                                <td class="span3">
+                                    @Translation.Get("Resources", Enums.TranslationSource.TextTranslation)
+                                </td>
+                                <td>
+                                    @Html.CheckBoxFor(m => m.Customer.RestrictUserToGroupOnExternalPage) &nbsp; &nbsp; @Translation.GetCoreTextTranslation("Allow only managers to login")
+                                </td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>
+                                    @Html.CheckBoxFor(m => m.Customer.FetchDataFromApiOnExternalPage) &nbsp; &nbsp; @Translation.GetCoreTextTranslation("Fetch data from Api")                                    
+                                </td>
+                            </tr>                           
+                        </table>
+                    </div>
+
                     <h4>@Translation.Get("Självservice – Meny", Enums.TranslationSource.TextTranslation)</h4>
                     <div class="formContainer">
                         <table class="tableform">
@@ -192,16 +212,16 @@
                                     @Translation.GetCoreTextTranslation("Mina ärende visar")
                                 </td>
                                 <td>
-                                    @Html.CheckBoxFor(m => m.Customer.MyCasesInitiator) &nbsp; &nbsp; @Translation.GetCoreTextTranslation("Anmälare")
+                                    @Html.CheckBoxFor(m => m.Customer.MyCasesRegistrator) &nbsp; &nbsp; @Translation.GetCoreTextTranslation("Registrerare")                                   
                                 </td>
                             </tr>
                             <tr>
                                 <td></td>
                                 <td>
-                                    @Html.CheckBoxFor(m => m.Customer.MyCasesRegistrator) &nbsp; &nbsp; @Translation.GetCoreTextTranslation("Registrerare")
+                                    @Html.CheckBoxFor(m => m.Customer.MyCasesInitiator) &nbsp; &nbsp; @Translation.GetCoreTextTranslation("Anmälare")
                                 </td>
                             </tr>
-                            <tr>
+                            @*<tr>
                                 <td></td>
                                 <td>
                                     @Html.CheckBoxFor(m => m.Customer.MyCasesFollower) &nbsp; &nbsp; @Translation.GetCoreTextTranslation("Följare")
@@ -212,14 +232,22 @@
                                 <td>
                                     @Html.CheckBoxFor(m => m.Customer.MyCasesRegarding) &nbsp; &nbsp; @Translation.GetCoreTextTranslation("Angående")
                                 </td>
+                            </tr>*@
+                            <tr>
+                                <td></td>
+                                <td>
+                                    @Html.CheckBoxFor(m => Model.Customer.MyCasesUserGroup) &nbsp; &nbsp; @Translation.GetCoreTextTranslation("User Group")                                    
+                                </td>
                             </tr>
                             <tr id="caseTypes">
-                                <td class="span3">
+                                <td class="span3"> 
+                                    <br />                                   
                                     @Translation.Get("Ärendetyp", Enums.TranslationSource.TextTranslation)
                                 </td>
                                 <td>
                                     <table>
                                         <tr>
+                                            <br />
                                             <td>@Translation.Get("Tillgängliga", Enums.TranslationSource.TextTranslation)</td>
                                             <td></td>
                                             <td>@Translation.Get("Valda", Enums.TranslationSource.TextTranslation)</td>
